ITACLOUD-117: Fixed overflow caused by the scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@
       font-size: 12px;
       padding-top: 2px;
       color: #363636;
-      width: 156px;
+      width: 144px;
       line-height: 1.5em;
       display: block; }
       #search-results .search-result .descr, #search-results .search-result .descr .hostname {
